style: Убраны лишние импорты, переделан ReadMe